src/objects/Euro_Match__c.object
<CustomObject>
    <description>This stores all the matches</description>
    <fields>
        <fullName>Away_Goals__c</fullName>
        <label>Away Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Away_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Away Team</label>
        <referenceTo>Euro_Team__c</referenceTo>
        <relationshipLabel>Euro Matches (Away Team)</relationshipLabel>
        <relationshipName>Euro_Matches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Euro_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Euro Group</label>
        <referenceTo>Euro_Group__c</referenceTo>
        <relationshipLabel>Euro Matches</relationshipLabel>
        <relationshipName>Euro_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ground__c</fullName>
        <label>Ground</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Goals__c</fullName>
        <label>Home Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Team</label>
        <referenceTo>Euro_Team__c</referenceTo>
        <relationshipLabel>Euro Matches</relationshipLabel>
        <relationshipName>Euro_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kick_Off__c</fullName>
        <label>Kick-Off</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Knockout_rounds__c</fullName>
        <label>Knockout rounds</label>
        <picklist>
            <picklistValues>
                <fullName>Round of 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter-finals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-finals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result_Shared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Result Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Result</label>
        <type>Checkbox</type>
    </fields>
    <label>Euro Match</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Euro_Group__c</columns>
        <columns>Home_Team__c</columns>
        <columns>Home_Goals__c</columns>
        <columns>Away_Goals__c</columns>
        <columns>Away_Team__c</columns>
        <columns>Ground__c</columns>
        <columns>Kick_Off__c</columns>
        <columns>Result__c</columns>
        <columns>Knockout_rounds__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Euro Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Euro Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>